<resources>
    <string name="app_name">Final_Todo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="category_name">Category Name</string>
    <string name="todo_title">Title</string>
    <string name="todo_description">Description</string>
    <string name="todo_date">Date</string>
    <string name="todo_priority">Priority</string>
    <string name="todo_high">High</string>
    <string name="todo_medium">Medium</string>
    <string name="todo_low">Low</string>
    <string name="todo_category">Category</string>
    <string name="save_todo">Save</string>
    <string name="todo_complete">Completed</string>
    <string name="register_name">Register</string>
    <string name="user_name">User Name</string>
    <string name="user_name_Edit">User Name</string>
    <string name="gmail_txt">Gmail</string>
    <string name="gmail_edit">Gmail</string>
    <string name="phone_number_edit">Phone Number</string>
    <string name="phone_txt">Phone</string>
    <string name="password_txt">Password</string>
    <string name="password_edit">Password</string>
    <string name="confirm_password_edit">Confirm Password</string>
    <string name="confirm_password_txt">Confirm Password</string>
    <string name="terms_of_service_chkBox">Terms of service</string>
    <string name="already_have_account_txt">Already have account?</string>
    <string name="login_txt">LOGIN.</string>
    <string name="register_button">Register</string>
    <string name="welcome_splash_txt">Welcome</string>
    <string name="login_btn">Login</string>
    <string name="user_name_txt">User Name</string>
    <string name="user_name_edit">User Name</string>
    <string name="password_txt_login">Password</string>
    <string name="password_edit_login">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_txt">Register.</string>
    <string name="login_button">Login</string>
    <string name="cancel_btn">Cancel</string>
    <string name="textview_todo">TextView</string>
    <string name="new_category_menuitem">New Category</string>
    <string name="clear_all_menuitem">CLear all</string>
    <string name="go_to_todolist_menuitem">Go to TodoList</string>
    <string name="logout_menuitem">Logout</string>
    <string name="add_task_menuitem">Add Task</string>
    <string name="delete_all_todo_menuitem">Delete All Todo</string>
    <string name="delete_all_completed_todo_menuitem">Delete all Completed Todo</string>
    <string name="logout_menuItem">Logout</string>
</resources>