<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/statusRemoveTheme"
    android:background="@drawable/reg">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register_name"
        android:textColor="#090909"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/register_page"
        android:layout_width="411dp"
        android:layout_height="549dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:theme="@style/statusRemoveTheme"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">


        <EditText
            android:id="@+id/register_activity_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/baseline_person_20"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/user_name_Edit"
            android:inputType="textPersonName"
            android:minHeight="48dp" />


        <EditText
            android:id="@+id/register_activity_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/gmail_edit"
            android:inputType="textPersonName"
            android:minHeight="48dp" />


        <EditText
            android:id="@+id/register_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/baseline_phone_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/phone_number_edit"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/register_activity_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/baseline_key_20"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/password_edit"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />


        <EditText
            android:id="@+id/register_activity_Cpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/baseline_key_20"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/confirm_password_txt"
            android:inputType="textPersonName"
            android:minHeight="48dp" />


        <CheckBox
            android:id="@+id/TermcheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/terms_of_service_chkBox" />

        <LinearLayout
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/register_button"
                android:textColor="#FAF5F5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="394dp"
            android:layout_height="32dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:text="@string/already_have_account_txt"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/login_txt"
                android:textColor="@android:color/black"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

