<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/statusRemoveTheme"
    android:background="@drawable/logbg"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="192dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login_btn"
        android:textColor="#090909"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="442dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">


        <EditText
            android:id="@+id/login_activity_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/user_name_edit"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingTop="20dp" />

        <EditText
            android:id="@+id/login_activity_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawableLeft="@drawable/baseline_key_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/password_edit_login"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingTop="20dp" />

        <LinearLayout
            android:layout_width="393dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/login_activity_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/login_button"
                android:textColor="#F8F6F6"
                app:cornerRadius="30dp" />

            <Button
                android:id="@+id/login_activity_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/cancel_btn"
                android:textColor="#F1EDED"
                app:cornerRadius="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="16dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/register_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/register_txt"
                android:textColor="@android:color/black"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>