<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_todo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/todo_title"
    android:paddingTop="70dp"
    android:background="@drawable/uptodo"
    tools:context=".TodoFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="#33FF"
            app:cardCornerRadius="20dp"
            app:cardElevation="15dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="casual"
                    android:text="Add Task"
                    android:textAlignment="center"
                    android:textColor="#070707"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/todo_title" />

                    <EditText
                        android:id="@+id/fragment_todo_txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/todo_title"
                        android:drawableLeft="@drawable/baseline_title_24"
                        android:drawablePadding="8dp"
                        android:inputType="textPersonName"
                        android:minHeight="60dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/todo_description" />

                    <EditText
                        android:id="@+id/fragment_todo_txtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/todo_description"
                        android:drawableLeft="@drawable/baseline_description_24"
                        android:drawablePadding="8dp"
                        android:inputType="textMultiLine"
                        android:minLines="2" />

                    <TextView
                        android:id="@+id/categoryTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/todo_category" />

                    <Spinner
                        android:id="@+id/fragment_todo_cbo_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconDrawable="@drawable/baseline_category_24"
                        android:contentDescription="@string/todo_category"
                        android:minHeight="48dp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/todo_date" />

                    <EditText
                        android:id="@+id/fragment_todo_txt_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:ems="10"
                        android:drawableLeft="@drawable/baseline_calendar_month_24"
                        android:drawablePadding="8dp"
                        android:focusable="false"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/todo_priority" />

                    <RadioGroup
                        android:id="@+id/fragment_todo_rg_priority"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/fragment_todo_rb_high"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="#F44336"
                            android:text="@string/todo_high"
                            android:textColor="#F44336" />

                        <RadioButton
                            android:id="@+id/fragment_todo_rb_mid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:buttonTint="#FF9800"
                            android:text="@string/todo_medium"
                            android:textColor="#FF9800" />

                        <RadioButton
                            android:id="@+id/fragment_todo_rb_low"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="#4CAF50"
                            android:text="@string/todo_low"
                            android:textColor="#057C0A" />

                    </RadioGroup>

                    <CheckBox
                        android:id="@+id/fragment_todo_chk_complete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/todo_complete"
                        android:text="@string/todo_complete" />

                    <Button
                        android:id="@+id/fragment_todo_btn_Save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_shape"
                        android:text="@string/save_todo"
                        android:textColor="#F4F4F4" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>